code improvement & doc