@@ -20,7 +20,6 @@ import com.venus.exception.VenusPropertyNotFound;
 public class BeanFactory implements IBeanFactory {
 	private final String PROTOYPE_SCOPE = "prototype";
 	private final String DEFAULT_TYPE = "java.lang.String";
-
 	private HashMap<String, Object> beans = new HashMap<>();
 
 	public BeanFactory() {
@@ -47,17 +46,16 @@ public class BeanFactory implements IBeanFactory {
 
 	@Override
 	public boolean beanExists(String name) {
-		if(this.beans.containsKey(name)) return true;
+		if (this.beans.containsKey(name))
+			return true;
 		return false;
 	}
 
 	@Override
 	public boolean isSingleton(String name) {
-		for (Iterator<?> beansIterator = BeansDefinitionApplication
-				.getBeansDefinitionApplication().iterator(); beansIterator
-				.hasNext();) {
-			BeanDefinition beanDefinition = (BeanDefinition) beansIterator
-					.next();
+		for (Iterator<?> beansIterator = BeansDefinitionApplication.getBeansDefinitionApplication()
+				.iterator(); beansIterator.hasNext();) {
+			BeanDefinition beanDefinition = (BeanDefinition) beansIterator.next();
 			if (beanDefinition.getId().equals(name) && beanDefinition.isSingleton()) {
 				return true;
 			}
@@ -65,68 +63,64 @@ public class BeanFactory implements IBeanFactory {
 		return false;
 	}
 
+	/**
+	 * Iterates all the beans definition, creates all the beans and places them all
+	 * in the container which's represented by a hashMap named beans
+	 */
 	private void beansInstantiationResult() {
 		Object bean = null;
-		for (Iterator<?> beansIterator = BeansDefinitionApplication
-				.getBeansDefinitionApplication().iterator(); beansIterator
-				.hasNext();) {
-			BeanDefinition beanDefinition = (BeanDefinition) beansIterator
-					.next();
-			if (!beanDefinition.isInstanciated()) {
-				bean = instanciateObject(beanDefinition.getClassName(),
-						beanDefinition);
+		for (Iterator<?> beansIterator = BeansDefinitionApplication.getBeansDefinitionApplication()
+				.iterator(); beansIterator.hasNext();) {
+			BeanDefinition beanDefinition = (BeanDefinition) beansIterator.next();
+			if (!beanDefinition.isInstantiated()) {
+				bean = instanciateObject(beanDefinition.getClassName(), beanDefinition);
 				setBeanProperties(bean, beanDefinition);
-				BeansDefinitionApplication
-						.markBeanAsInstanciated(beanDefinition);
+				BeansDefinitionApplication.markBeanAsInstantiated(beanDefinition);
 				this.beans.put(beanDefinition.getId(), bean);
 			}
 		}
 	}
 
+	/**
+	 * On each request to obtain a bean by the method named getBean (), this method
+	 * is called to check if the scope of this object is prototype. If so, another
+	 * new instance should be created, injected as a dependency into the associated
+	 * beans and placed in the container.
+	 * 
+	 * @param name name of the requested bean
+	 */
 	private void checkBeanForPrototypeScope(String prototypeBeanName) {
 		Object bean = null;
 		BeanDefinition relatedBeanDefinition = null;
-		for (Iterator<?> beansIterator = BeansDefinitionApplication
-				.getBeansDefinitionApplication().iterator(); beansIterator
-				.hasNext();) {
+		for (Iterator<?> beansIterator = BeansDefinitionApplication.getBeansDefinitionApplication()
+				.iterator(); beansIterator.hasNext();) {
 			relatedBeanDefinition = (BeanDefinition) beansIterator.next();
 
 			if (relatedBeanDefinition.getId().equals(prototypeBeanName)) {
-				if ((relatedBeanDefinition.getScope() != null && relatedBeanDefinition
-						.getScope().equals(PROTOYPE_SCOPE))
+				if ((relatedBeanDefinition.getScope() != null
+						&& relatedBeanDefinition.getScope().equals(PROTOYPE_SCOPE))
 						|| !relatedBeanDefinition.isSingleton()) {
-					bean = instanciateObject(
-							relatedBeanDefinition.getClassName(),
-							relatedBeanDefinition);
-					setBeanPropertiesForProtoype(bean,
-							relatedBeanDefinition.getProperties());
+					bean = instanciateObject(relatedBeanDefinition.getClassName(), relatedBeanDefinition);
+					setBeanPropertiesForProtoype(bean, relatedBeanDefinition);
 				}
 				break;
 			}
 		}
 
-		if (relatedBeanDefinition != null
-				&& ((relatedBeanDefinition.getScope() != null && relatedBeanDefinition
-						.getScope().equals(PROTOYPE_SCOPE)) || !relatedBeanDefinition
-						.isSingleton())) {
+		if (relatedBeanDefinition != null && ((relatedBeanDefinition.getScope() != null
+				&& relatedBeanDefinition.getScope().equals(PROTOYPE_SCOPE)) || !relatedBeanDefinition.isSingleton())) {
 			this.beans.put(prototypeBeanName, bean);
-			for (Iterator<?> beansIterator = BeansDefinitionApplication
-					.getBeansDefinitionApplication().iterator(); beansIterator
-					.hasNext();) {
-				BeanDefinition beanDefinition = (BeanDefinition) beansIterator
-						.next();
-				for (Iterator<?> beansPropertiesIterator = beanDefinition
-						.getProperties().iterator(); beansPropertiesIterator
-						.hasNext();) {
-					BeanProperty beanProperty = (BeanProperty) beansPropertiesIterator
-							.next();
+			for (Iterator<?> beansIterator = BeansDefinitionApplication.getBeansDefinitionApplication()
+					.iterator(); beansIterator.hasNext();) {
+				BeanDefinition beanDefinition = (BeanDefinition) beansIterator.next();
+				for (Iterator<?> beansPropertiesIterator = beanDefinition.getProperties()
+						.iterator(); beansPropertiesIterator.hasNext();) {
+					BeanProperty beanProperty = (BeanProperty) beansPropertiesIterator.next();
 					if (beanProperty.getName().equals(prototypeBeanName)) {
-						Object referencerBean = this.beans.get(beanDefinition
-								.getId());
+						Object referencerBean = this.beans.get(beanDefinition.getId());
 						try {
 							setProperty(referencerBean, bean, prototypeBeanName);
-							this.beans.put(beanDefinition.getId(),
-									referencerBean);
+							this.beans.put(beanDefinition.getId(), referencerBean);
 						} catch (VenusPropertyNotFound e) {
 							e.printStackTrace();
 						}
@@ -138,15 +132,18 @@ public class BeanFactory implements IBeanFactory {
 
 	}
 
-	private void setBeanPropertiesForProtoype(Object bean,
-			ArrayList<BeanProperty> properties) {
-		for (Iterator<?> beanPropertiesIt = properties.iterator(); beanPropertiesIt
-				.hasNext();) {
+	/**
+	 * Sets bean's properties with the scope // prototype //
+	 * 
+	 * @param bean    an instance of bean
+	 * @param beanDef the related bean definition
+	 */
+	private void setBeanPropertiesForProtoype(Object bean, BeanDefinition beanDef) {
+		for (Iterator<?> beanPropertiesIt = beanDef.getProperties().iterator(); beanPropertiesIt.hasNext();) {
 			BeanProperty beanProperty = (BeanProperty) beanPropertiesIt.next();
 			if (beanProperty.getRef() != null) {
 				try {
-					Object referencedBean = this.beans.get(beanProperty
-							.getRef());
+					Object referencedBean = this.beans.get(beanProperty.getRef());
 					setProperty(bean, referencedBean, beanProperty.getName());
 				} catch (VenusPropertyNotFound e) {
 					e.printStackTrace();
@@ -154,29 +151,33 @@ public class BeanFactory implements IBeanFactory {
 			}
 			setUpSimpleProperties(bean, beanProperty);
 		}
+		BehaviourMethodsInvoker.invokeFor(bean, beanDef.getId(),
+				beans.get(BeansDefinitionApplication.getPostProcessorBeanName()), beanDef.getInitMethod());
 	}
 
+	/**
+	 * Sets all beans properties when building the instantiation result, and calls
+	 * the method invokeFor() of BehaviourMethodsInvoker to run each bean's life
+	 * cycle
+	 * 
+	 * @param bean    an instance of bean
+	 * @param beanDef the related bean definition
+	 */
 	private void setBeanProperties(Object bean, BeanDefinition beanDef) {
-		for (Iterator<?> beanPropertiesIt = beanDef.getProperties().iterator(); beanPropertiesIt
-				.hasNext();) {
+		for (Iterator<?> beanPropertiesIt = beanDef.getProperties().iterator(); beanPropertiesIt.hasNext();) {
 			BeanProperty beanProperty = (BeanProperty) beanPropertiesIt.next();
 			if (beanProperty.getRef() != null) {
 				try {
-					BeanDefinition beanDefinition = findBeanDefinitionByPropertyReference(beanProperty
-							.getRef());
+					BeanDefinition beanDefinition = findBeanDefinitionByPropertyReference(beanProperty.getRef());
 					if (beanDefinition != null) {
-						Object referencedBean = instanciateObject(
-								beanDefinition.getClassName(), beanDefinition);
-						setProperty(bean, referencedBean,
-								beanProperty.getName());
+						Object referencedBean = instanciateObject(beanDefinition.getClassName(), beanDefinition);
+						setProperty(bean, referencedBean, beanProperty.getName());
 						this.beans.put(beanDefinition.getId(), referencedBean);
-						BeansDefinitionApplication
-								.markBeanAsInstanciated(beanDefinition);
-						setBeanProperties(referencedBean,beanDefinition);
+						BeansDefinitionApplication.markBeanAsInstantiated(beanDefinition);
+						setBeanProperties(referencedBean, beanDefinition);
 					} else {
-						throw new VenusBeanConfigurationNotFound("Bean "
-								+ beanProperty.getRef()
-								+ " not found in Configuration file");
+						throw new VenusBeanConfigurationNotFound(
+								"Bean " + beanProperty.getRef() + " not found in Configuration file");
 					}
 
 				} catch (VenusBeanConfigurationNotFound | VenusPropertyNotFound e) {
@@ -185,25 +186,29 @@ public class BeanFactory implements IBeanFactory {
 			}
 			setUpSimpleProperties(bean, beanProperty);
 		}
-		BehaviourMethodsInvoker.invokeFor(bean, beanDef.getId(), beans.get(
-				BeansDefinitionApplication.getPostProcessorBeanName()), beanDef.getInitMethod());
+		BehaviourMethodsInvoker.invokeFor(bean, beanDef.getId(),
+				beans.get(BeansDefinitionApplication.getPostProcessorBeanName()), beanDef.getInitMethod());
 
 	}
 
+	/**
+	 * Sets bean's properties which have primitive types
+	 * 
+	 * @param bean         an instance of bean
+	 * @param beanProperty the related property of the bean
+	 */
 	private void setUpSimpleProperties(Object bean, BeanProperty beanProperty) {
 		if (beanProperty.getValue() != null) {
 			String propertyType;
 			if (beanProperty.getType() != null) {
 				propertyType = beanProperty.getType();
 			} else {
-				Class<?> cls = findPropertyDeclarationClass(bean,
-						beanProperty.getName());
+				Class<?> cls = findPropertyDeclarationClass(bean, beanProperty.getName());
 				propertyType = cls.getName();
 			}
 			Object object;
 			if (isPrimitive(propertyType)) {
-				object = getPropertyValueWithPrmTypes(propertyType,
-						beanProperty.getValue());
+				object = getPropertyValueWithPrmTypes(propertyType, beanProperty.getValue());
 			} else {
 				object = instanciateObject(propertyType, null);
 				object = beanProperty.getValue();
@@ -216,144 +221,152 @@ public class BeanFactory implements IBeanFactory {
 		}
 	}
 
-	private Object instanciateObject(String className,
-			BeanDefinition beanDefinition) {
+	/**
+	 * Returns an object after the instantiation of it's class. It's supports the
+	 * instantiation with class constructors, related factories beans and related
+	 * factory methods
+	 * 
+	 * @param className      class name of the object which will be created
+	 * @param beanDefinition bean definition, could be null
+	 * @return the object, result of instantiation
+	 * 
+	 */
+	private Object instanciateObject(String className, BeanDefinition beanDefinition) {
 		Object object = null;
 		try {
-			if (beanDefinition != null
-					&& beanDefinition.getConstructorArguments() != null
+			if (beanDefinition != null && beanDefinition.getConstructorArguments() != null
 					&& beanDefinition.getConstructorArguments().size() > 0) {
 
-				Class[] paramCls = new Class<?>[beanDefinition
-						.getConstructorArguments().size()];
+				Class[] paramCls = new Class<?>[beanDefinition.getConstructorArguments().size()];
 				ArrayList<Object> paramValues = new ArrayList<>();
-				for (int i = 0; i < beanDefinition.getConstructorArguments()
-						.toArray().length; i++) {
+				for (int i = 0; i < beanDefinition.getConstructorArguments().toArray().length; i++) {
 					BeanConstructorArgument constructorArgument = (BeanConstructorArgument) beanDefinition
 							.getConstructorArguments().toArray()[i];
 					Object paramObject = null;
 					if (constructorArgument.getType() == null
-							|| (constructorArgument.getType() != null && !isPrimitive(constructorArgument
-									.getType()))) {
-						paramCls[i] = Class.forName((constructorArgument
-								.getType() == null) ? DEFAULT_TYPE
-								: constructorArgument.getType());
+							|| (constructorArgument.getType() != null && !isPrimitive(constructorArgument.getType()))) {
+						paramCls[i] = Class.forName(
+								(constructorArgument.getType() == null) ? DEFAULT_TYPE : constructorArgument.getType());
 						paramObject = instanciateObject(
-								(constructorArgument.getType() == null) ? DEFAULT_TYPE
-										: constructorArgument.getType(), null);
+								(constructorArgument.getType() == null) ? DEFAULT_TYPE : constructorArgument.getType(),
+								null);
 						paramObject = constructorArgument.getValue();
 					} else {
-						paramCls[i] = getParamsClass(constructorArgument
-								.getType());
-						paramObject = getPropertyValueWithPrmTypes(
-								constructorArgument.getType(),
+						paramCls[i] = getParamsClass(constructorArgument.getType());
+						paramObject = getPropertyValueWithPrmTypes(constructorArgument.getType(),
 								constructorArgument.getValue());
 					}
 					paramValues.add(paramObject);
 				}
 				if (beanDefinition.getFactoryMethod() != null) {
-					object= getObjectFromFactory(beanDefinition, paramCls,paramValues);
-				}
-				else{
-				object = Class.forName(className).getConstructor(paramCls)
-						.newInstance(paramValues.toArray());
+					object = getObjectFromFactory(beanDefinition, paramCls, paramValues);
+				} else {
+					object = Class.forName(className).getConstructor(paramCls).newInstance(paramValues.toArray());
 				}
 
 			} else {
-				if (beanDefinition != null
-						&& beanDefinition.getFactoryMethod() != null) {
+				if (beanDefinition != null && beanDefinition.getFactoryMethod() != null) {
 					object = getObjectFromFactory(beanDefinition, null, null);
 				} else
-					object = Class.forName(className).getConstructor()
-							.newInstance();
+					object = Class.forName(className).getConstructor().newInstance();
 
 			}
 
-		} catch (SecurityException | InstantiationException
-				| IllegalAccessException | IllegalArgumentException
-				| InvocationTargetException | NoSuchMethodException
-				| ClassNotFoundException e) {
+		} catch (SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException
+				| InvocationTargetException | NoSuchMethodException | ClassNotFoundException e) {
 			e.printStackTrace();
 		}
 		return object;
 	}
-	private Object getObjectFromFactory(BeanDefinition beanDefinition,Class[] paramCls, ArrayList<Object> paramValues ){
-		Object object=null;
+
+	/**
+	 * Returns an object after the instantiation with factory-bean or method-bean
+	 * 
+	 * @param beanDefinition the related bean definition
+	 * @param paramCls       constructor parameters class array
+	 * @param paramValues    constructor parameters values list
+	 * @return the object, result of instantiation by the factory-bean or
+	 *         factory-method
+	 */
+	private Object getObjectFromFactory(BeanDefinition beanDefinition, Class[] paramCls,
+			ArrayList<Object> paramValues) {
+		Object object = null;
 		try {
-				if (beanDefinition.getFactoryBean() != null) {
-					if (beanExists(beanDefinition.getFactoryBean())) {
-						Object factoryBean = this.beans.get(beanDefinition
-								.getFactoryBean());
-						Class<?> factoryClass = factoryBean.getClass();
-						Method setter;
-						if(paramCls!=null){
-							 setter = factoryClass.getMethod(
-									beanDefinition.getFactoryMethod(), paramCls);
-								object = setter.invoke(factoryBean, paramValues);
-
-						}
-						else{
-							 setter = factoryClass.getMethod(beanDefinition.getFactoryMethod());
-							 object = setter.invoke(factoryBean);
-						}
-					}
-				} else {
-					Class<?> factoryClass = Class.forName(beanDefinition
-							.getClassName());
+			if (beanDefinition.getFactoryBean() != null) {
+				if (beanExists(beanDefinition.getFactoryBean())) {
+					Object factoryBean = this.beans.get(beanDefinition.getFactoryBean());
+					Class<?> factoryClass = factoryBean.getClass();
 					Method setter;
-					if(paramCls!=null){
-						 setter = factoryClass.getMethod(
-								beanDefinition.getFactoryMethod(), paramCls);
-							object = setter.invoke(null, paramValues);
+					if (paramCls != null) {
+						setter = factoryClass.getMethod(beanDefinition.getFactoryMethod(), paramCls);
+						object = setter.invoke(factoryBean, paramValues);
 
+					} else {
+						setter = factoryClass.getMethod(beanDefinition.getFactoryMethod());
+						object = setter.invoke(factoryBean);
 					}
-					else{
-						 setter = factoryClass.getMethod(beanDefinition.getFactoryMethod());
-							object = setter.invoke(null);
+				}
+			} else {
+				Class<?> factoryClass = Class.forName(beanDefinition.getClassName());
+				Method setter;
+				if (paramCls != null) {
+					setter = factoryClass.getMethod(beanDefinition.getFactoryMethod(), paramCls);
+					object = setter.invoke(null, paramValues);
 
-					}
+				} else {
+					setter = factoryClass.getMethod(beanDefinition.getFactoryMethod());
+					object = setter.invoke(null);
 
 				}
 
-		} catch (NoSuchMethodException | SecurityException
-				| ClassNotFoundException | IllegalAccessException
+			}
+
+		} catch (NoSuchMethodException | SecurityException | ClassNotFoundException | IllegalAccessException
 				| IllegalArgumentException | InvocationTargetException e) {
 			e.printStackTrace();
 		}
 		return object;
-				
+
 	}
 
-	private void setProperty(Object mainObject, Object property,
-			String propertyName) throws VenusPropertyNotFound {
+	/**
+	 * Sets bean's property
+	 * 
+	 * @param mainObject   the principal object, in which the property object will
+	 *                     be injected
+	 * @param property     the property object
+	 * @param propertyName the property's name
+	 */
+	private void setProperty(Object mainObject, Object property, String propertyName) throws VenusPropertyNotFound {
 		if (findPropertyDeclarationClass(mainObject, propertyName) != null) {
 			try {
 				Method setter = mainObject.getClass().getMethod(
-						"set"
-								+ propertyName.replaceFirst(propertyName
-										.substring(0, 1), propertyName
-										.substring(0, 1).toUpperCase()),
-						new Class[] { findPropertyDeclarationClass(mainObject,
-								propertyName)});
+						"set" + propertyName.replaceFirst(propertyName.substring(0, 1),
+								propertyName.substring(0, 1).toUpperCase()),
+						new Class[] { findPropertyDeclarationClass(mainObject, propertyName) });
 				setter.invoke(mainObject, new Object[] { property });
-			} catch (NoSuchMethodException | SecurityException
-					| IllegalAccessException | IllegalArgumentException
+			} catch (NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException
 					| InvocationTargetException e) {
 				e.printStackTrace();
 			}
 
 		} else {
-			throw new VenusPropertyNotFound("Field " + propertyName
-					+ " not found in Class: " + mainObject.getClass().getName());
+			throw new VenusPropertyNotFound(
+					"Field " + propertyName + " not found in Class: " + mainObject.getClass().getName());
 		}
 	}
 
-	private Class<?> findPropertyDeclarationClass(Object mainObject,
-			String propertyName) {
+	/**
+	 * Finds the class of a property in the main object class
+	 * 
+	 * @param mainObject   the principal object
+	 * @param propertyName property's name (field's name)
+	 * @return the class of the property (field's name)
+	 */
+	private Class<?> findPropertyDeclarationClass(Object mainObject, String propertyName) {
 		Class<?> cls = null;
-		for (Iterator<?> classFieldsIt = Arrays.asList(
-				mainObject.getClass().getDeclaredFields()).iterator(); classFieldsIt
-				.hasNext();) {
+		for (Iterator<?> classFieldsIt = Arrays.asList(mainObject.getClass().getDeclaredFields())
+				.iterator(); classFieldsIt.hasNext();) {
 			Field field = (Field) classFieldsIt.next();
 			if (field.getName().equals(propertyName)) {
 				cls = field.getType();
@@ -363,11 +376,15 @@ public class BeanFactory implements IBeanFactory {
 		return cls;
 	}
 
-	private BeanDefinition findBeanDefinitionByPropertyReference(
-			String reference) {
-		for (Iterator<?> beansDefIterator = BeansDefinitionApplication
-				.getBeansDefinitionApplication().iterator(); beansDefIterator
-				.hasNext();) {
+	/**
+	 * Finds the bean definition related to a referenced property
+	 * 
+	 * @param reference bean definition identifier of the referenced property
+	 * @return the bean definition of the property
+	 */
+	private BeanDefinition findBeanDefinitionByPropertyReference(String reference) {
+		for (Iterator<?> beansDefIterator = BeansDefinitionApplication.getBeansDefinitionApplication()
+				.iterator(); beansDefIterator.hasNext();) {
 			BeanDefinition beanDef = (BeanDefinition) beansDefIterator.next();
 			if (beanDef.getId().equals(reference)) {
 				return beanDef;
@@ -376,16 +393,27 @@ public class BeanFactory implements IBeanFactory {
 		return null;
 	}
 
+	/**
+	 * Checks if the type of a property is primitive
+	 * 
+	 * @param type the type to check
+	 * @return boolean value reflecting whether this type is primitive
+	 */
 	private boolean isPrimitive(String type) {
-		if (type.equals("boolean") || type.equals("byte")
-				|| type.equals("short") || type.equals("int")
-				|| type.equals("long") || type.equals("float")
-				|| type.equals("double") || type.equals("char")) {
+		if (type.equals("boolean") || type.equals("byte") || type.equals("short") || type.equals("int")
+				|| type.equals("long") || type.equals("float") || type.equals("double") || type.equals("char")) {
 			return true;
 		}
 		return false;
 	}
 
+	/**
+	 * Converts the value in parameter to the appropriate type
+	 * 
+	 * @param type  the type to which the value will be converted
+	 * @param value the value to be converted
+	 * @return object, result of conversion
+	 */
 	private Object getPropertyValueWithPrmTypes(String type, String value) {
 		switch (type) {
 		case "boolean":
@@ -410,6 +438,12 @@ public class BeanFactory implements IBeanFactory {
 		}
 	}
 
+	/**
+	 * Returns the class of a primitive type in parameter
+	 * 
+	 * @param type the primitive type
+	 * @return class of the related type
+	 */
 	private Class<?> getParamsClass(String type) {
 		switch (type) {
 		case "boolean":
@@ -432,21 +466,26 @@ public class BeanFactory implements IBeanFactory {
 			return String.class;
 		}
 	}
-    public void destroyBeans() {
-    	BeansDefinitionApplication.getBeansDefinitionApplication()
-    	.stream().filter(beanDef->{
+
+	/**
+	 * Destroys all the beans in the container with running the method
+	 * invokeOnShutDownContainerFor() of BehaviourMethodsInvoker to check the beans
+	 * life cycle
+	 */
+	public void destroyBeans() {
+		BeansDefinitionApplication.getBeansDefinitionApplication().stream().filter(beanDef -> {
 			try {
-			return Arrays.asList(Class.forName(beanDef.getClassName()).getInterfaces()).contains(BehaviourDestroy.class)||
-						beanDef.getDestroyMethod()!=null;
+				return Arrays.asList(Class.forName(beanDef.getClassName()).getInterfaces())
+						.contains(BehaviourDestroy.class) || beanDef.getDestroyMethod() != null;
 			} catch (ClassNotFoundException e) {
 				e.printStackTrace();
 			}
 			return false;
-		})
-    	.forEach(beanDef->{
-    		BehaviourMethodsInvoker.invokeOnShutDownContainerFor(this.beans.get(beanDef.getId()), beanDef.getId(), beanDef.getDestroyMethod());
-    	});
-    	this.beans.clear();
-    }
+		}).forEach(beanDef -> {
+			BehaviourMethodsInvoker.invokeOnShutDownContainerFor(this.beans.get(beanDef.getId()), beanDef.getId(),
+					beanDef.getDestroyMethod());
+		});
+		this.beans.clear();
+	}
 
 }
